--- a/app/views/pages/home/_work.html.erb
+++ b/app/views/pages/home/_work.html.erb
@@ -1,6 +1,8 @@
 <section id="work">
-  <div id="work-menu">
-    <div id="work-menu-center"></div>
-    <div id="work-menu-petal-container"></div>
+  <div id="work-container">
+    <div id="work-menu">
+      <div id="work-menu-center"></div>
+      <div id="work-menu-petal-container"></div>
+    </div>
   </div>
 </section>
