--- a/app/assets/stylesheets/pages/home/_history.scss
+++ b/app/assets/stylesheets/pages/home/_history.scss
@@ -4,11 +4,14 @@ section#history {
   overflow-x: hidden;
   overflow-y: hidden;
   
+  @include transition(all, 1s, $normal-bezier, 0s);
+  
   div#history-container {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
+    @include transition(height, 1s, $normal-bezier, 0s);
     
     div#history-mechanism {
       position: absolute;
