--- a/app/views/pages/home/_about.html.erb
+++ b/app/views/pages/home/_about.html.erb
@@ -7,6 +7,7 @@
           <a id="about-contact" href="#contact">
             <span>CONTACT</span>
           </a>
+        </div>
       </div>
     </div>
     
