--- a/app/assets/stylesheets/pages/home/_about.scss
+++ b/app/assets/stylesheets/pages/home/_about.scss
@@ -26,12 +26,14 @@ section#about {
       
       div.about-card {
         position: absolute;
-        left: -150%;
+        left: 150%;
         top: -150%;
         width: 100%;
         height: 100%;
         background: darken(map-get($mex, blue), 15%);
         
+        @include user-select(none);
+        @include cursor-grab;
         @include transition(all, 1s, $normal-bezier, 0s);
         @include border-radius(8px);
         
@@ -43,7 +45,11 @@ section#about {
         }
         
         &.away {
-          left: 150%;
+          left: -150%;
+        }
+        
+        &.mousedown {
+          @include cursor-grabbing;
         }
         
         div.about-card-tondo {
@@ -57,7 +63,8 @@ section#about {
           background-position: center center;
           background-color: #ccc;
           background-size: cover;
-        
+          
+          @include user-select(none);
           @include border-radius(50%);
           @include transition(all, 1s, $normal-bezier, 0s);
           @include transform(translate(-50%,-50%));
@@ -73,12 +80,13 @@ section#about {
           @include align-items(center);
           position: absolute;
           left: 50%;
-          // height: 100%;
           width: 100%;
           padding: 4px;
           color: white;
-          // z-index: -1;
+          cursor: default;
           
+          @include user-select(none);
+          @include cursor-grab;
           @include transform(translate(-50%, -50%));
           @include transition(all, 1s, $normal-bezier, 0s);
           
