--- a/app/views/pages/home/_work.html.erb
+++ b/app/views/pages/home/_work.html.erb
@@ -2,7 +2,17 @@
   <div id="work-container">
     <div id="work-menu">
       <div id="work-menu-center"></div>
-      <div id="work-menu-petal-container"></div>
+      <div id="work-menu-petal-container">
+        <div class="work-menu-petal">
+          <div><%= render "icons/lisp" %></div>
+        </div>
+        <div class="work-menu-petal">
+          <div><%= render "icons/bash" %></div>
+        </div>
+        <div class="work-menu-petal">
+          <div><%= render "icons/about" %></div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
