Add content, cards, card swiping to work section

--- a/app/views/pages/home/_work.html.erb
+++ b/app/views/pages/home/_work.html.erb
@@ -4,13 +4,31 @@
       <div id="work-menu-center"></div>
       <div id="work-menu-petal-container">
         <div class="work-menu-petal">
+          <div><%= render "icons/beard" %></div>
+        </div>
+        <div class="work-menu-petal">
           <div><%= render "icons/lisp" %></div>
         </div>
         <div class="work-menu-petal">
           <div><%= render "icons/bash" %></div>
         </div>
         <div class="work-menu-petal">
-          <div><%= render "icons/about" %></div>
+          <div><%= render "icons/contact" %></div>
+        </div>
+      </div>
+    </div>
+    
+    <div id="work-cards">
+      <div id="work-card-contact" class="work-card">
+        <div>
+          <div class="work-card-head">
+            <span>Maybe you feel like reaching out</span>
+          </div>
+          <div class="work-card-body">
+            <a id="work-contact" href="#contact">
+              <span>CONTACT</span>
+            </a>
+          </div>
         </div>
       </div>
     </div>
