--- a/app/assets/stylesheets/pages/home/_work.scss
+++ b/app/assets/stylesheets/pages/home/_work.scss
@@ -16,10 +16,13 @@ section#work {
     
     div#work-menu {
       position: absolute;
+      z-index: 1;
       
       div#work-menu-center {
         position: absolute;
         background: white;
+        border: 2px solid darken(map-get($mex, red), 30%);
+        z-index: 1;
         
         @include transform(translate(-50%,-50%));
         @include border-radius(50%);
@@ -29,14 +32,18 @@ section#work {
         position: relative;
         height: 100%;
         width: 100%;
-        background: rgba(0,0,0,0.3);
+        // background: rgba(map-get($mex, red), 25%);
+        background: rgba(255, 255, 255, 0.35);
+        // border: 10px solid rgba(255, 255, 255, 0.75);
         
         @include transition(transform, 1s, $normal-bezier, 0s);
+        @include border-radius(50%);
         
         div.work-menu-petal {
           position: absolute;
           text-align: center;
-          background: white;
+          background: darken(map-get($mex, red), 10%);
+          border: 2px solid white;
           cursor: pointer;
           
           @include transform(translate(-50%,-50%));
@@ -45,23 +52,23 @@ section#work {
           @include transition(transform, 1s, $normal-bezier, 0s);
           
           &.hover {
-            background: darken(map-get($mex, red), 2%);
-            border: 1px solid white;
+            background: white;
+            border: 2px solid darken(map-get($mex, red), 10%);
             
             div {
               svg {
-                stroke: white;
+                stroke: darken(map-get($mex, red), 10%);
               }
             }
           }
           
           &.mousedown, &.active {
-            background: darken(map-get($mex, red), 5%);
-            border: 1px solid white;
+            background: white;
+            border: 2px solid darken(map-get($mex, red), 20%);
             
             div {
               svg {
-                stroke: white;
+                stroke: darken(map-get($mex, red), 20%);
               }
             }
           }
@@ -82,7 +89,137 @@ section#work {
             padding: 17.5%;
             
             svg {
-              stroke: darken(map-get($mex, red), 5%);
+              stroke: white;
+            }
+          }
+        }
+      }
+    }
+    
+    div#work-cards {
+      position: absolute;
+      height: calc(100% - 30px);
+      width: calc(100% - 30px);
+      top: 15px;
+      left: 15px;
+      color: white;
+      
+      div.work-card {
+        @include display-flex;
+        @include align-items(center);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: -110%;
+        top: 0;
+        padding: 10px;
+        background: darken(map-get($mex, red), 15%);
+        opacity: 0;
+        
+        @include user-select(none);
+        @include cursor-grab;
+        @include transition(all, 1s, $normal-bezier, 0s);
+        @include border-radius(8px);
+        
+        &.focus {
+          left: 0;
+          opacity: 1;
+        }
+        
+        // &.away {
+        //   top: 110%;
+        // }
+        
+        &.mousedown {
+          @include cursor-grabbing;
+        }
+        
+        div {
+          display: block;
+          width: 100%;
+        
+          div.work-card-head {
+            display: block;
+            @include display-flex;
+            @include align-items(center);
+            position: relative;
+            height: 15%;
+            width: 100%;
+            font-size: 3.75em;
+            // border-bottom: 4px solid white;
+            padding-bottom: 8px;
+            
+            @include respond-to(phone) { font-size: 2em; }
+            
+            span {
+              display: block;
+              width: 100%;
+              text-align: center;
+              position: relative;
+            }
+          }
+          
+          div.work-card-body {
+            display: block;
+            @include display-flex;
+            @include align-items(flex-start);
+            position: relative;
+            height: 85%;
+            width: 100%;
+            padding: 10px;
+            font-size: 2em;
+            
+            @include respond-to(phone) { font-size: 1em; }
+            
+            span {
+              display: block;
+              width: 100%;
+              text-align: center;
+              position: relative;
+            }
+          }
+        }
+      }
+      
+      div#work-card-contact {
+        div {
+          div.work-card-body {
+            justify-content: center;
+            
+            a#work-contact {
+              @include display-flex;
+              @include align-items(center);
+              position: relative;
+              height: 64px;
+              width: 40%;
+              text-decoration: none;
+              font-size: 1em;
+              text-align: center;
+              color: darken(map-get($mex, red), 10%);
+              background: white;
+                
+              @include respond-to(phone) {
+                width: calc(100% - 60px);
+                height: 48px;
+                font-size: 1.5em;
+              }
+              
+              @include border-radius(8px);
+                
+              span {
+                display: block;
+                width: 100%;
+                text-align: center;
+                position: relative;
+              }
+              
+              &.hover {
+                border: 4px solid darken(map-get($mex, red), 10%);
+              }
+              
+              &.mousedown {
+                @include transform(translateY(4px));
+              }
             }
           }
         }
